# StarterAgent2D

./: .gitignore  ChangeLog  Makefile  Makefile.in  NEWS.en  README.md  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  bhv_basic_tackle.cpp  bhv_basic_tackle.h  bhv_custom_before_kick_off.cpp  bhv_go_to_static_ball.cpp  bhv_goalie_basic_move.cpp  bhv_goalie_basic_move.h  bhv_goalie_free_kick.cpp  bhv_penalty_kick.cpp  bhv_penalty_kick.h  bhv_prepare_set_play_kick.cpp  bhv_set_play.cpp  bhv_set_play.h  bhv_set_play_free_kick.cpp  bhv_set_play_goal_kick.cpp  bhv_set_play_goal_kick.h  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_indirect_free_kick.h  bhv_set_play_kick_in.cpp  bhv_set_play_kick_off.cpp  bhv_their_goal_kick_move.cpp  bhv_their_goal_kick_move.h  intention_receive.cpp  keepaway_communication.cpp  sample_communication.cpp  sample_player.cpp  sample_player.h  start.sh.in  strategy.cpp  strategy.h
